# study-books

./: README.md
concurrency/: pom.xml
concurrency/src/main/java/com/concurrency/chapter10/: transLock.java
concurrency/src/main/java/com/concurrency/chapter12/: BoundedBuffer.java  BoundedBufferTest.java  PutTakeTest.java
concurrency/src/main/java/com/concurrency/chapter14/: BaseBoundedBuffer.java  ConditionBoundedBuffer.java  GrumpyBoundedBuffer.java  OneShotLatch.java  SemaphoreOnLock.java  SleepyBoundedBuffer.java  ThreadGate.java
concurrency/src/main/java/com/concurrency/chapter15/: ConcurrentStack.java  LinkedQueue.java
concurrency/src/main/java/com/concurrency/chapter16/: DoubleCheckedLocking.java  PossibleReordering.java  ResourceFactory.java  Sync.java  UnsafeLazyInitialization.java
effective-java/: pom.xml
es-demo/: pom.xml
es-demo/src/test/java/com/es/demo/: EsTest.java  (+1 more)
lite-spring/: build.gradle  settings.gradle
lite-spring/src/test/resources/: log4j.xml  petstore-v1.xml  petstore-v2.xml  petstore-v3.xml  petstore-v4.xml  petstore-v5.xml
os-homework/: CMakeLists.txt
os-homework/05-插叙：进程api/: 1.c  2.c  3.c  4.c
os-homework/06-机制：首先运行/: test-content-switch.c  test-system-call.c
os-homework/08-调度：多级反馈队列/: mlfq.py
os-homework/14-插叙：内存操作API/: null.c
os-homework/16-分段/: segmentation.py
os-homework/17-空闲空间管理/: malloc.py
os-homework/18-分页：介绍/: paging-linear-translate.py
os-homework/20-分页：较小的表/: paging-multilevel-translate.py
os-homework/26-并发：介绍/: flag.s  peterson.s  t0.c  test-and-set.s  test-and-test-and-set.s  ticket.s  yield.s
(+154 files in other folders)
