cmake_minimum_required(VERSION 3.20)
project(os_homework C)

set(CMAKE_C_STANDARD 11)

add_executable(os_homework_05_1 05/1.c)
add_executable(os_homework_05_2 05/2.c)
add_executable(os_homework_05_3 05/3.c)
add_executable(os_homework_05_4 05/4.c)
add_executable(os_homework_06_1 06/test-content-switch.c)
add_executable(os_homework_06_2 06/test-system-call.c)
