cmake_minimum_required(VERSION 3.20)
project(os_homework C)

set(CMAKE_C_STANDARD 11)

add_executable(os_homework_05_1 05-插叙：进程api/1.c)
add_executable(os_homework_05_2 05-插叙：进程api/2.c)
add_executable(os_homework_05_3 05-插叙：进程api/3.c)
add_executable(os_homework_05_4 05-插叙：进程api/4.c)
add_executable(os_homework_06_1 06-机制：首先运行/test-content-switch.c)
add_executable(os_homework_06_2 06-机制：首先运行/test-system-call.c)
add_executable(os_homework_14_1 14-插叙：内存操作API/null.c)
add_executable(os_homework_19_1 19-分页：快速地址转换（TLB）/tlb.c)
